Completed MacOSProcess implmenentation
Signed-off-by: Daniel Widdis <widdis@gmail.com>